完善学生模块

--- a/pages/admin/teacher-crud.html
+++ b/pages/admin/teacher-crud.html
@@ -86,9 +86,10 @@
                 <el-table-column prop="gender" label="性别" align="center"></el-table-column>
                 <el-table-column prop="age" label="年龄" align="center"></el-table-column>
                 <el-table-column prop="degree" label="学位" align="center"></el-table-column>
-                <el-table-column label="操作" align="center">
+                <el-table-column label="操作" align="center" width="300">
                     <template slot-scope="scope">
                         <el-button type="primary" size="mini" @click="handleUpdate(scope.row)">编辑</el-button>
+                        <el-button @click="handleUpdatePassword(scope.row)" size="mini" type="warning">重置密码</el-button>
                         <el-button size="mini" type="danger" @click="handleDelete(scope.row)">删除</el-button>
                     </template>
                 </el-table-column>
@@ -174,6 +175,16 @@
                                     <el-input v-model="formData.username"/>
                                 </el-form-item>
                             </el-col>
+                            <el-col :span="12">
+                                <el-form-item label="学位:" prop="degree">
+                                    <el-select v-model="formData.degree">
+                                        <el-option label="博士" value="博士"></el-option>
+                                        <el-option label="硕士" value="硕士"></el-option>
+                                        <el-option label="博士后" value="博士后"></el-option>
+
+                                    </el-select>
+                                </el-form-item>
+                            </el-col>
                <!--             <el-col :span="12">
                                 <el-form-item label="密码:" prop="password">
                                     <el-input v-model="formData.password"/>
@@ -201,22 +212,41 @@
                                     </el-select>
                                 </el-form-item>
                             </el-col>
-                            <el-col :span="12">
-                                <el-form-item label="学位:" prop="degree">
-                                    <el-select v-model="formData.degree">
-                                        <el-option label="博士" value="博士"></el-option>
-                                        <el-option label="硕士" value="硕士"></el-option>
-                                        <el-option label="博士后" value="博士后"></el-option>
-
-                                    </el-select>
-                                </el-form-item>
-                            </el-col>
+                           
                         </el-row>
 
                     </el-form>
                     <div slot="footer" class="dialog-footer">
                         <el-button @click="dialogFormVisible4Edit = false">取消</el-button>
                         <el-button type="primary" @click="handleEdit()">确定</el-button>
+                    </div>
+                </el-dialog>
+            </div>
+
+            
+            <!-- 更新密码弹层 -->
+            <div class="edit-password--form">
+                <el-dialog :visible.sync="dialogFormVisible4EditPassword" title="更新学生密码">
+                    <el-form :model="formData" :rules="rules" label-position="right" label-width="100px"
+                             ref="dataEditForm">
+
+                        <el-row>
+                            <el-col :span="12">
+                                <el-form-item label="新密码:" prop="password">
+                                    <el-input v-model="formData.password"/>
+                                </el-form-item>
+                            </el-col>
+                            <el-col :span="12">
+                                <el-form-item label="确认新密码:" prop="password">
+                                    <el-input v-model="formData.password"/>
+                                </el-form-item>
+                            </el-col>
+                        </el-row>
+
+                    </el-form>
+                    <div class="dialog-footer" slot="footer">
+                        <el-button @click="dialogFormVisible4EditPassword = false">取消</el-button>
+                        <el-button @click="handleEdit()" type="primary">确定</el-button>
                     </div>
                 </el-dialog>
             </div>
@@ -255,6 +285,7 @@
             formData: {}, //表单数据
             dialogFormVisible: false, //增加表单是否可见
             dialogFormVisible4Edit: false, //编辑表单是否可见
+            dialogFormVisible4EditPassword: false, //编辑密码表单是否可见
             rules: {
                 //校验规则
                 username: [
@@ -287,6 +318,10 @@
             }
         },
         methods: {
+            handleUpdatePassword(row) {
+                    this.dialogFormVisible4EditPassword = true;
+                }
+                ,
             //分页查询
             findPage() {
                 //需要交给后台的当前页信息
