--- a/login.html
+++ b/login.html
@@ -1,203 +1,201 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <!-- 页面meta -->
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <title>传智健康</title>
-    <meta content="传智健康" name="description" />
-    <meta content="传智健康" name="keywords" />
-    <meta
-      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
-      name="viewport"
-    />
+    <title>毕业设计选题系统</title>
+    <meta content="毕业设计选题系统" name="description" />
+    <meta content="毕业设计选题系统" name="keywords" />
+    <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport" />
     <!-- 引入样式 -->
     <link href="plugins/elementui/index.css" rel="stylesheet" />
     <link href="css/login.css" rel="stylesheet" />
     <style>
-      #captchaInput {
-        width: 35%;
-      }
+        #captchaInput {
+            width: 35%;
+        }
 
-      #captcha {
-        position: absolute;
-        left: 317px;
-        top: 155px;
-        border-radius: 8px;
-      }
+        #captcha {
+
+            position: absolute;
+            left: 314px;
+            top: 208px;
+            border-radius: 8px;
+
+        }
+
+        #title {
+            font-size: 23px;
+            font-style: italic;
+        }
     </style>
-  </head>
-  <body class="hold-transition skin-purple sidebar-mini">
+</head>
+
+<body class="hold-transition skin-purple sidebar-mini">
     <div id="app">
-      <div class="login-container">
-        <div class="loginBox">
-          <el-form
-            :model="ruleForm"
-            :rules="rules"
-            class="demo-ruleForm"
-            label-width="100px"
-            ref="ruleForm"
-            status-icon
-          >
-            <el-form-item label="用户名:" prop="username">
-              <el-input
-                autocomplete="off"
-                v-model="ruleForm.username"
-              ></el-input>
-            </el-form-item>
-            <el-form-item label="密码:" prop="password">
-              <el-input
-                autocomplete="off"
-                type="password"
-                v-model="ruleForm.password"
-              ></el-input>
-            </el-form-item>
-            <el-form-item label="验证码" prop="verCode">
-              <el-input id="captchaInput" v-model.number="ruleForm.verCode" />
-            </el-form-item>
-            <!--验证码图片-->
-            <img
-              id="captcha"
-              :src="codeImg"
-              @click="updateCode"
-              alt="验证码"
-              title="点击换一张"
-            />
-            <el-form-item>
-              <el-radio label="student" v-model="radio">学生</el-radio>
-              <el-radio label="teacher" v-model="radio">教师</el-radio>
-              <el-radio label="admin" v-model="radio">管理员</el-radio>
-            </el-form-item>
-            <el-form-item>
-              <el-button @click="submitForm('ruleForm')" type="primary"
-                >登录</el-button
-              >
-              <el-button @click="resetForm('ruleForm')">重置</el-button>
-            </el-form-item>
-          </el-form>
+        <div class="login-container">
+            <div class="loginBox">
+                <el-form :model="ruleForm" :rules="rules" class="demo-ruleForm" label-width="100px" ref="ruleForm"
+                    status-icon>
+                    <el-form-item>
+                        <span id="title">欢迎使用毕业设计选题系统</span>
+                    </el-form-item>
+                    <el-form-item label="用户名:" prop="username">
+                        <el-input autocomplete="off" v-model="ruleForm.username"></el-input>
+                    </el-form-item>
+                    <el-form-item label="密码:" prop="password">
+                        <el-input autocomplete="off" type="password" v-model="ruleForm.password"></el-input>
+                    </el-form-item>
+                    <el-form-item label="验证码" prop="verCode">
+                        <el-input id="captchaInput" v-model.number="ruleForm.verCode" />
+                    </el-form-item>
+                    <!--验证码图片-->
+                    <img :src="codeImg" @click="updateCode" alt="验证码" id="captcha" title="点击换一张" />
+                    <el-form-item>
+                        <el-radio label="student" v-model="radio">学生</el-radio>
+                        <el-radio label="teacher" v-model="radio">教师</el-radio>
+                        <el-radio label="admin" v-model="radio">管理员</el-radio>
+                    </el-form-item>
+                    <el-form-item>
+                        <el-button @click="submitForm('ruleForm')" type="primary">登录
+                        </el-button>
+                        <el-button @click="resetForm('ruleForm')">重置</el-button>
+                    </el-form-item>
+                </el-form>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
-  <!-- 引入组件库 -->
-  <script src="js/vue.js"></script>
-  <script src="js/axios-0.18.0.js"></script>
-  <script src="plugins/elementui/index.js"></script>
-  <script>
+</body>
+<!-- 引入组件库 -->
+<script src="js/vue.js"></script>
+<script src="js/axios-0.18.0.js"></script>
+<script src="plugins/elementui/index.js"></script>
+<script>
+    axios.defaults.withCredentials = true;
     let vm = new Vue({
-      el: "#app",
-      data() {
-        const verCode = (rule, value, callback) => {
-          if (!value) {
-            return callback(new Error("验证码不能为空"));
-          }
-          setTimeout(() => {
-            if (!Number.isInteger(value)) {
-              callback(new Error("请输入数字值"));
-            } else {
-              callback();
-            }
-          }, 1000);
-        };
-        const username = (rule, value, callback) => {
-          if (value === "") {
-            callback(new Error("请输入用户名"));
-          } else {
-            if (this.ruleForm.password !== "") {
-              this.$refs.ruleForm.validateField("password");
-            }
-            callback();
-          }
-        };
-        const password = (rule, value, callback) => {
-          if (value === "") {
-            callback(new Error("请输入密码"));
-          } else {
-            callback();
-          }
-        };
-        return {
-          ruleForm: {
-            username: "",
-            password: "",
-            verCode: "",
-          },
-          radio: "student",
-          rules: {
-            username: [{ validator: username, trigger: "blur" }],
-            password: [{ validator: password, trigger: "blur" }],
-            verCode: [{ validator: verCode, trigger: "blur" }],
-          },
-          codeImg: "",
-        };
-      },
-      created() {
-        axios.defaults.withCredentials = true;
-        this.updateCode();
-      },
-      methods: {
-        updateCode() {
-          let _this = this;
-          axios
-            .get(
-              `http://106.15.249.199:8083/topicsystem/captcha?=${Math.random()}`,
-              {
-                responseType: "arraybuffer",
-              }
-            )
-            .then((res) => {
-              // 后端需要的响应头中的信息参数赋值
-              //   this.captchaId = res.headers["x-ocp-captcha-id"];
-              // 转换
-              let codeImg =
-                "data:image/png;base64," +
-                btoa(
-                  new Uint8Array(res.data).reduce(
-                    (data, byte) => data + String.fromCharCode(byte),
-                    ""
-                  )
-                );
-              _this.codeImg = codeImg;
-            });
+        el: "#app",
+        data() {
+            const verCode = (rule, value, callback) => {
+                if (!value) {
+                    if(value == 0) {
+                        return callback(new Error("验证码不能为0,请刷新验证码"));
+                    }
+                    return callback(new Error("验证码不能为空"));
+                }
+                setTimeout(() => {
+                    if (!Number.isInteger(value)) {
+                        callback(new Error("请输入数字值"));
+                    } else {
+                        callback();
+                    }
+                }, 1000);
+            };
+            const username = (rule, value, callback) => {
+                if (value === "") {
+                    callback(new Error("请输入用户名"));
+                } else {
+                    if (this.ruleForm.password !== "") {
+                        this.$refs.ruleForm.validateField("password");
+                    }
+                    callback();
+                }
+            };
+            const password = (rule, value, callback) => {
+                if (value === "") {
+                    callback(new Error("请输入密码"));
+                } else {
+                    callback();
+                }
+            };
+            return {
+                ruleForm: {
+                    username: "",
+                    password: "",
+                    verCode: "",
+                },
+                radio: "student",
+                rules: {
+                    username: [{ validator: username, trigger: "blur" }],
+                    password: [{ validator: password, trigger: "blur" }],
+                    verCode: [{ validator: verCode, trigger: "blur" }],
+                },
+                codeImg: "",
+            };
         },
-
-        submitForm(formName) {
-          this.$refs[formName].validate((valid) => {
-            if (valid) {
-              // alert('submit!');
-              const formData = {
-                username: this.ruleForm.username,
-                password: this.ruleForm.password,
-                verCode: this.ruleForm.verCode,
-                role: this.radio,
-              };
-              axios
-                .post("http://106.15.249.199:8083/topicsystem/login/", formData)
-                .then((response) => {
-                  if (response.data.code === 200) {
-                    this.$message({
-                      message: response.data.message,
-                      type: "success",
+        created() {
+            this.updateCode();
+        },
+        methods: {
+            updateCode() {
+                let _this = this;
+                axios
+                    .get(
+                        `http://106.15.249.199:8083/topicsystem/captcha?=${Math.random()}`,
+                        {
+                            responseType: "arraybuffer",
+                        }
+                    )
+                    .then((res) => {
+                        // 后端需要的响应头中的信息参数赋值
+                        //   this.captchaId = res.headers["x-ocp-captcha-id"];
+                        // 转换
+                        let codeImg =
+                            "data:image/png;base64," +
+                            btoa(
+                                new Uint8Array(res.data).reduce(
+                                    (data, byte) => data + String.fromCharCode(byte),
+                                    ""
+                                )
+                            );
+                        _this.codeImg = codeImg;
                     });
-                    // 存储
-                    sessionStorage.setItem("username", formData.username);
+            },
 
-                    window.location.href = "pages/index.html";
-                  } else {
-                    this.$message.error(response.data.message);
-                    // window.location.href = "pages/index.html"
-                  }
+            submitForm(formName) {
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        // alert('submit!');
+                        const formData = {
+                            username: this.ruleForm.username,
+                            password: this.ruleForm.password,
+                            verCode: this.ruleForm.verCode,
+                            role: this.radio,
+                        };
+                        axios
+                            .post("http://106.15.249.199:8083/topicsystem/login/", formData)
+                            .then((response) => {
+                                if (response.data.code === 200) {
+                                    /* this.$message({
+                                        message: response.data.message,
+                                        type: "success",
+                                    }); */
+                                    // 存储
+                                    sessionStorage.setItem("username", formData.username);
+
+                                    window.location.href = "pages/index.html";
+
+
+                                } else {
+                                    this.$message.error(response.data.message);
+                                    // window.location.href = "pages/index.html"
+                                }
+                            })
+                            .finally(() => {
+                                this.updateCode();
+                            });
+                    } else {
+                        console.log("error submit!!");
+                        return false;
+                    }
                 });
-            } else {
-              console.log("error submit!!");
-              return false;
-            }
-          });
+            },
+            resetForm(formName) {
+                this.$refs[formName].resetFields();
+            },
         },
-        resetForm(formName) {
-          this.$refs[formName].resetFields();
-        },
-      },
     });
-  </script>
+</script>
+
 </html>
